// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders always active 1`] = `
Array [
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hello World
  </span>,
  .emotion-2 {
  padding: 0.375rem;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1;
  color: #fff;
  background: #494c4c;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  border-radius: 0.1875rem;
  box-shadow: 0 0.125rem 0.25rem rgba(12,13,13,0.15);
  border: 1px solid #494c4c;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.375rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.375rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.375rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.375rem;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #494c4c;
  margin-left: -5px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #494c4c;
  margin-left: -5px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #494c4c;
  margin-top: -5px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #494c4c;
  margin-top: -5px;
}

.emotion-2[data-placement$='-start'] .emotion-1::after,
.emotion-2[data-placement$='-start'] .emotion-1::before {
  left: 15px;
}

.emotion-2[data-placement$='-end'] .emotion-1::after,
.emotion-2[data-placement$='-end'] .emotion-1::before {
  left: auto;
  right: 9px;
}

.emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 5px;
}

.emotion-0::before {
  border-width: 6px;
}

<div
    className="emotion-2 emotion-3"
    data-placement="top"
  >
    Tooltip Content
    <span
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;

exports[`Tooltip renders correctly 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hello World
</span>
`;

exports[`Tooltip renders in light mode 1`] = `
Array [
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Hello World
  </span>,
  .emotion-0::after,
.emotion-0::before {
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.emotion-0::after {
  border-width: 5px;
}

.emotion-0::before {
  border-width: 6px;
}

.emotion-2 {
  padding: 0.375rem;
  font-size: 0.75rem;
  font-weight: 700;
  line-height: 1;
  color: #fff;
  background: #494c4c;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  border-radius: 0.1875rem;
  box-shadow: 0 0.125rem 0.25rem rgba(12,13,13,0.15);
  border: 1px solid #494c4c;
  -webkit-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  padding: calc(0.375rem - 1);
  background-color: #f3f3f3;
  border-color: #abb3b3;
  color: #494c4c;
}

.emotion-2[data-placement^='top'] {
  margin-bottom: 0.375rem;
}

.emotion-2[data-placement^='bottom'] {
  margin-top: 0.375rem;
}

.emotion-2[data-placement^='left'] {
  margin-right: 0.375rem;
}

.emotion-2[data-placement^='right'] {
  margin-left: 0.375rem;
}

.emotion-2[data-placement^='top'] .emotion-1::after,
.emotion-2[data-placement^='top'] .emotion-1::before {
  top: 100%;
  left: 50%;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #494c4c;
  margin-left: -5px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after,
.emotion-2[data-placement^='bottom'] .emotion-1::before {
  bottom: 100%;
  left: 50%;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #494c4c;
  margin-left: -5px;
}

.emotion-2[data-placement^='left'] .emotion-1::after,
.emotion-2[data-placement^='left'] .emotion-1::before {
  left: 100%;
  top: 50%;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #494c4c;
  margin-top: -5px;
}

.emotion-2[data-placement^='right'] .emotion-1::after,
.emotion-2[data-placement^='right'] .emotion-1::before {
  right: 100%;
  top: 50%;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #494c4c;
  margin-top: -5px;
}

.emotion-2[data-placement$='-start'] .emotion-1::after,
.emotion-2[data-placement$='-start'] .emotion-1::before {
  left: 15px;
}

.emotion-2[data-placement$='-end'] .emotion-1::after,
.emotion-2[data-placement$='-end'] .emotion-1::before {
  left: auto;
  right: 9px;
}

.emotion-2[data-placement^='top'] .emotion-1::after {
  border-top-color: #f3f3f3;
}

.emotion-2[data-placement^='top'] .emotion-1::before {
  border-top-color: #abb3b3;
  margin-left: -6px;
}

.emotion-2[data-placement^='bottom'] .emotion-1::after {
  border-bottom-color: #f3f3f3;
}

.emotion-2[data-placement^='bottom'] .emotion-1::before {
  border-bottom-color: #abb3b3;
  margin-left: -6px;
}

.emotion-2[data-placement^='left'] .emotion-1::after {
  border-left-color: #f3f3f3;
}

.emotion-2[data-placement^='left'] .emotion-1::before {
  border-left-color: #abb3b3;
  margin-top: -6px;
}

.emotion-2[data-placement^='right'] .emotion-1::after {
  border-right-color: #f3f3f3;
}

.emotion-2[data-placement^='right'] .emotion-1::before {
  border-right-color: #abb3b3;
  margin-top: -6px;
}

.emotion-2[data-placement$='-end'] .emotion-1::before {
  right: calc(9px - 1px);
}

<div
    className="emotion-2 emotion-3"
    data-placement="top"
  >
    Tooltip Content
    <span
      className="emotion-0 emotion-1"
    />
  </div>,
]
`;
